landing page finshed

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Welcome to My Portfolio</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-<div class="container">
-  <h1>Hello to my portfolio</h1>
-  <p>Welcome to my personal portfolio website.</p>
-</div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Yggdrasill501's Portfolio</title><script defer="defer" src="/static/js/main.30a7de23.js"></script><link href="/static/css/main.baf12e2c.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
